jilles      2006/06/23 15:25:09 UTC	(20060623-5514)
  Log:
  Add tracking for non-standard simple modes with parameters (type C).
  At this time /cs recover will desync them.
  

  Changes:	Modified:
  +3 -0		trunk/include/channels.h (File Modified) 
  +38 -1	trunk/src/cmode.c (File Modified) 


w00t        2006/06/23 15:06:08 UTC	(20060623-5512)
  Log:
  Added hook on server EOB, fixes dual notice issue caused by r5508 changes noted by jilles

  Changes:	Modified:
  +24 -3	trunk/protocol/inspircd.c (File Modified) 


w00t        2006/06/23 09:19:12 UTC	(20060623-5508)
  Log:
  Forward port 5506, once I learned how 'patch' worked again.

  Changes:	Modified:
  +42 -23	trunk/protocol/inspircd.c (File Modified) 


jilles      2006/06/22 14:41:49 UTC	(20060622-5502)
  Log:
  Add some text about user and channel modes.
  Does not describe the in-the-works changes to type C modes.
  

  Changes:	Modified:
  +64 -0	trunk/doc/MODES (File Added) 


jilles      2006/06/22 13:36:19 UTC	(20060622-5500)
  Log:
  Unreal: deal with client SJOIN creating a channel
  Not tested
  

  Changes:	Modified:
  +6 -2		trunk/protocol/unreal.c (File Modified) 


jilles      2006/06/22 13:30:35 UTC	(20060622-5498)
  Log:
  All m_sjoin(), TS6 m_join():
  Give channel_mode() all parameters (but not the nicklist)
  instead of only the first two. This also simplifies the code.
  

  Changes:	Modified:
  +1 -10	trunk/protocol/bahamut.c (File Modified) 
  +2 -20	trunk/protocol/charybdis.c (File Modified) 
  +2 -20	trunk/protocol/hybrid.c (File Modified) 
  +1 -10	trunk/protocol/hyperion.c (File Modified) 
  +1 -10	trunk/protocol/monkey.c (File Modified) 
  +1 -10	trunk/protocol/plexus.c (File Modified) 
  +1 -10	trunk/protocol/ptlink.c (File Modified) 
  +2 -20	trunk/protocol/ratbox.c (File Modified) 
  +1 -10	trunk/protocol/shadowircd.c (File Modified) 
  +1 -10	trunk/protocol/solidircd.c (File Modified) 
  +1 -10	trunk/protocol/ultimate3.c (File Modified) 